# karvio

./: .gitignore  CNAME  README.md  config.example  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  mkdocs.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_init.py  0002_auth_providers.py
backend/app/: main.py
backend/app/api/: router.py
backend/app/core/: application_events.py  queue.py  (+14 more)
backend/scripts/: bootstrap.py  generate_demo_data.py
backend/tests/: async_db_helpers.py  conftest.py  test_access_service.py  test_ai_test_cases_api.py  test_api_smoke.py  test_attachment_policy.py  test_attachments_api.py  test_audit_logs_api.py  test_auth_dependencies.py  test_auth_providers_api.py  test_bootstrap_service.py  test_db_session.py  test_environments_api.py  test_jira_integration_api.py  test_junit_import_api.py  test_ldap_login_api.py  test_observability_metrics.py  test_oidc_auth_api.py  test_performance_api.py  test_performance_comparisons_api.py  test_products_api.py  test_reports_export_api.py  test_reports_summary.py  test_repositories_common.py  test_run_case_status_service.py  test_run_cases_api.py  test_schemas_common.py  test_status_endpoint.py  test_suites_api.py  test_test_case_exports_api.py  test_test_case_list_filters_api.py  test_test_case_owner_defaults_api.py  test_test_case_templates_api.py  test_test_datasets_api.py  test_test_plans_api.py  test_test_runs_environment_registry_api.py  test_unauthenticated_access.py  test_user_api_keys_api.py  test_users_api.py
(+796 files in other folders)
