[project]
name = "tms-backend"
version = "1.0.0"
description = "Karvio backend API"
requires-python = ">=3.11"
dependencies = [
  "aiofiles>=24.1.0",
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "sqlalchemy>=2.0.32",
  "alembic>=1.13.2",
  "psycopg[binary]>=3.2.1",
  "procrastinate>=2.9.0",
  "httpx>=0.27.0",
  "cryptography>=43.0.0",
  "pydantic>=2.8.2",
  "pydantic-settings>=2.4.0",
  "email-validator>=2.2.0",
  "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.2",
  "pytest-cov>=5.0.0",
  "pytest-asyncio>=0.23.8",
  "httpx>=0.27.0",
  "ruff>=0.6.2",
  "testcontainers[postgres]>=4.7.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.setuptools.packages.find]
include = ["app*"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
